--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -7,3 +7,20 @@ div.article-entry p {
   font-family: "宋体";
   font-size: 18px;
 }
+#article-nav-newer {
+  background-image: linear-gradient(to left, #ffffff, #eeeeee);
+}
+#article-nav-older {
+  background-image: linear-gradient(to right, #ffffff, #eeeeee);
+}
+a {
+transition: all 0.5s;
+}
+
+.widget a:hover {
+  color: #993399;
+  text-decoration: none
+}
+p.article-more-link a:hover {
+  background: #aaaaaa;
+}
