--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -20,6 +20,7 @@ transition: all 0.5s;
 .widget a:hover {
   color: #993399;
   text-decoration: none
+  transition: color 0.3s;
 }
 p.article-more-link a:hover {
   background: #aaaaaa;
